--- a/css/main.css
+++ b/css/main.css
@@ -36,3 +36,10 @@ label {
 	margin: 10px 5px;
     cursor: pointer;
 }
+
+.results {
+    font-family: Helvetica;
+    font-size: 12px;
+    color: darkslategray;
+    text-align: left;
+}
